ci: enable CI on feature branch and fix sonar issues in promotion and ai services